Added resolv action, and changed wizard.pike to allow returning -1 for 'stay with me' in wizard_done
Rev: server/base_server/config/describers.pike:1.54
Rev: server/base_server/roxen.pike:1.168
Rev: server/base_server/smartpipe.pike:1.3
Rev: server/base_server/wizard.pike:1.50
Rev: server/config_actions/resolv.pike:1.1
Rev: server/protocols/http.pike:1.56

--- a/.gitattributes
+++ b/.gitattributes
@@ -96,6 +96,7 @@ urw_itc_avant_garde-demi-r binary
 /server/config_actions/reloadconfiginterface.pike foreign_ident
 /server/config_actions/reloadconfigurations.pike foreign_ident
 /server/config_actions/requeststatus.pike foreign_ident
+/server/config_actions/resolv.pike foreign_ident
 /server/config_actions/shutdown.pike foreign_ident
 /server/config_actions/upgrade.pike foreign_ident
 /server/etc/config.html foreign_ident
