--- a/extern/configure.in
+++ b/extern/configure.in
@@ -1,4 +1,4 @@
-AC_REVISION("$Id: configure.in,v 1.17 1997/10/30 23:05:52 grubba Exp $")
+AC_REVISION("$Id: configure.in,v 1.18 1998/02/28 16:42:57 grubba Exp $")
 AC_INIT(cgi.c)
 AC_CONFIG_HEADER(config.h)
 
@@ -128,6 +128,71 @@ AC_MSG_RESULT($lpc_cv_shuffle)
 shuffle=$lpc_cv_shuffle
 AC_SUBST(shuffle)
 
+#
+####### From Pike 0.6
+#
+
+AC_MSG_CHECKING(available file descriptors)
+AC_CACHE_VAL(pike_cv_max_open_fd,
+[
+AC_TRY_RUN([
+#include <stdio.h>
+#ifdef HAVE_SYS_TIME_H
+#include <sys/time.h>
+#endif
+#ifdef HAVE_SYS_RESOURCE_H
+#include <sys/resource.h>
+#endif
+
+#ifndef MAX_FD
+#define MAX_FD 256
+#endif
+
+int main()
+{
+  FILE *f;
+  long limit;
+
+#if !defined(RLIMIT_NOFILE) && defined(RLIMIT_OFILE)
+#define RLIMIT_NOFILE RLIMIT_OFILE
+#endif
+
+#if defined(HAVE_SETRLIMIT) && defined(RLIMIT_NOFILE)
+  struct rlimit lim;
+
+  if(getrlimit(RLIMIT_NOFILE,&lim))
+  {
+    limit = MAX_FD;
+  }else{
+    if(lim.rlim_max == RLIM_INFINITY)
+    {
+      limit=16384; /* noone needs more */
+    }else{
+      limit=lim.rlim_max;
+      if(limit > 16384) limit=16384;
+    }
+  }
+#else
+  limit = MAX_FD;
+#endif
+
+  f=fopen("conftest.out.2","w");
+  fprintf(f,"%ld\n",(long)limit);
+  fclose(f);
+
+  return 0;
+}
+],
+pike_cv_max_open_fd=`cat conftest.out.2`
+,
+pike_cv_max_open_fd=256
+,
+pike_cv_max_open_fd=256
+)])
+AC_MSG_RESULT($pike_cv_max_open_fd)
+AC_DEFINE_UNQUOTED(MAX_OPEN_FILEDESCRIPTORS,$pike_cv_max_open_fd)
+
+#######
 
 AC_SUBST(LIBS)
 AC_CONFIG_SUBDIRS(fast_cgi)
