--- a/pike/configure.in
+++ b/pike/configure.in
@@ -13,6 +13,18 @@ AC_SUBST(OPTIMIZE)
 
 AC_SET_MAKE
 
-AC_CONFIG_SUBDIRS(src)
+AC_ARG_WITH(pike,   [  --with-pike          Specify version of Pike],[],[with_pike=0.5])
+
+case "$with_pike" in
+  0.5)
+  ;;
+  0.6)
+  ;;
+  *)
+    with_pike=0.5
+  ;;
+esac
+
+AC_CONFIG_SUBDIRS($with_pike/src)
 
 AC_OUTPUT(Makefile)
