--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 #
-# $Id: configure.in,v 1.42 1997/12/17 22:28:11 grubba Exp $
+# $Id: configure.in,v 1.43 1998/02/28 20:59:57 grubba Exp $
 #
 
 prefix=$PWD
@@ -57,8 +57,31 @@ esac
 # Check the arguments
 
 AC_ARG_WITH(gmp,     [  --with(out)-gmp        Support bignums],[],[with_gmp=yes])
-AC_ARG_WITH(zlib,     [  --with(out)-zlib       Support gzip compression],[],[with_zlib=yes])
+AC_ARG_WITH(zlib,    [  --with(out)-zlib       Support gzip compression],[],[with_zlib=yes])
 AC_ARG_WITH(gdbm,    [  --with(out)-gdbm       GNU database manager support ],[],[with_gdbm=yes])
+AC_ARG_WITH(pike,    [  --with-pike            Specify version of Pike],[],[with_pike=0.5])
+
+#
+# Version of Pike
+#
+
+AC_MSG_CHECKING(version of Pike to use)
+case "$with_pike" in
+  0.5)
+  ;;
+  0.6)
+  ;;
+  *)
+    with_pike=0.5
+  ;;
+esac
+AC_MSG_RESULT($with_pike)
+
+PIKEVERSION=$with_pike
+export PIKEVERSION
+
+AC_SUBST(PIKEVERSION)
+
 
 
 # Check compilers and such
@@ -104,7 +127,7 @@ AC_MINIX
 case $CC in
  *smartlink*) ;;
  *)
-   CC="$srcdir/pike/bin/smartlink $CC"
+   CC="$srcdir/pike/$with_pike/bin/smartlink $CC"
    ac_cv_prog_CC="$CC"
  ;;
 esac
