--- a/.gitattributes
+++ b/.gitattributes
@@ -205,6 +205,7 @@ urw_itc_avant_garde-demi-r binary
 /server/modules/tags/killframe.pike foreign_ident
 /server/modules/tags/lisp.pike foreign_ident
 /server/modules/tags/lpctag.pike foreign_ident
+/server/modules/tags/manual.pike foreign_ident
 /server/modules/tags/obox.pike foreign_ident
 /server/modules/tags/sqltag.pike foreign_ident
 /server/modules/tags/tablify.pike foreign_ident
