--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 #
-# $Id: configure.in,v 1.44 1998/03/04 12:45:48 mast Exp $
+# $Id: configure.in,v 1.45 1998/03/12 17:18:58 grubba Exp $
 #
 
 prefix=$PWD
@@ -68,16 +68,23 @@ AC_ARG_WITH(pike,    [  --with-pike            Specify version of Pike],[],[with
 AC_MSG_CHECKING(version of Pike to use)
 case "$with_pike" in
   0.5)
+    pike_version=0.5
   ;;
   0.6)
+    pike_version=0.6
+  ;;
+  dual|multi)
+    with_pike=dual
+    pike_version=0.6
   ;;
   *)
     with_pike=0.5
+    pike_version=0.5
   ;;
 esac
 AC_MSG_RESULT($with_pike)
 
-PIKEVERSION=$with_pike
+PIKEVERSION=$pike_version
 export PIKEVERSION
 
 AC_SUBST(PIKEVERSION)
