The variable subdirs interfered with autoconf's variable of the same name.
Rev: pike/configure.in:1.12

--- a/pike/configure.in
+++ b/pike/configure.in
@@ -34,12 +34,12 @@ if test "x$with_pike" = "xdual"; then
   for d in `cd $srcdir; echo [0-9]*`; do
     test -d $d/. || mkdir $d
   done
-  subdirs=`cd $srcdir; echo [0-9]*/src`
+  pike_subdirs=`cd $srcdir; echo [0-9]*/src`
 else
   test -d $with_pike/. || mkdir $with_pike
-  subdirs=$with_pike/src
+  pike_subdirs=$with_pike/src
 fi
 
-AC_CONFIG_SUBDIRS($subdirs)
+AC_CONFIG_SUBDIRS($pike_subdirs)
 
 AC_OUTPUT(Makefile)
