--- a/Makefile.in
+++ b/Makefile.in
@@ -196,6 +196,7 @@ weak_cleanup:
 
 bump_version:
 	@(cd $(SRCDIR); \
+	  echo Updating sources...; \
 	  if cvs -q update -dA|egrep '^[CM?]'; then exit 1; else : ; fi; \
 	)
 	@if test -f $(SRCDIR)/server/base_server/roxen.pike.new; then \
@@ -203,6 +204,7 @@ bump_version:
 	  rm $(SRCDIR)/server/base_server/roxen.pike.new || exit 1; \
 	else : ; fi
 	@(cd $(SRCDIR)/server/base_server; \
+	  echo Bumping version...; \
 	  build=`sed <roxen.pike -e'/__roxen_build__/s/[^0-9]*//gp' -ed|head -1`; \
 	  newbuild=`echo $$build 1+p|dc`; \
 	  sed <roxen.pike -e'/__roxen_build__/s/$$build/$$newbuild/' >roxen.pike.new; \
@@ -215,10 +217,12 @@ bump_version:
 	    exit 1; \
 	  fi; \
 	  version=`sed <roxen.pike -e'/__roxen_version__/s/[^.0-9]*//gp' -ed|head -1`; \
-	  cvs ci -m "Version bumped to $version.$build by bump_version." roxen.pike || exit 1
-	  echo "Roxen $$version.$$build" >../../VERSION
+	  cvs ci -m "Version bumped to $version.$build by bump_version." roxen.pike || exit 1; \
+	  echo "Roxen $$version.$$build" >../../VERSION; \
+	  cat ../../VERSION; \
 	)
 	(cd $(SRCDIR); \
+	  echo Tagging...; \
 	  cvs tag `cat VERSION | tr 'A-Z.' 'a-z_'`||exit 1; \
 	)
 
