Added new target - install_only. Doesn't go through the make all (which takes a long time on some boxes...) but just does the install.
Rev: Makefile.in:1.45

--- a/Makefile.in
+++ b/Makefile.in
@@ -73,7 +73,9 @@ clean:
 
 install_all: install_pike install
 
-install: all
+install: all install_only
+
+install_only: 
 	$(SRCDIR)/mkdir -p $(prefix)/roxen/
 	@if test -d $(prefix)/roxen/server.old/.; then \
 	  if test -d $(prefix)/roxen/server.older/.; then \
