--- a/Makefile.in
+++ b/Makefile.in
@@ -210,7 +210,7 @@ bump_version:
 	  build=`sed <roxen.pike -e'/__roxen_build__/s/[^0-9]*//gp' -ed|head -1`; \
 	  newbuild=`echo $$build 1+p|dc`; \
 	  sed <roxen.pike -e'/__roxen_build__/s/$$build/$$newbuild/' >roxen.pike.new; \
-	  checkbuild=`sed <roxen.pike.new -e'/__roxen_build__/s/[^0-9]*//gp' -ed|head -1`;
+	  checkbuild=`sed <roxen.pike.new -e'/__roxen_build__/s/[^0-9]*//gp' -ed|head -1`; \
 	  if test "x$$newbuild" = "x$$checkbuild"; then \
 	    mv -f roxen.pike.new roxen.pike || exit 1; \
 	    echo "Successfull bump to build $$newbuild."; \
@@ -223,7 +223,7 @@ bump_version:
 	  echo "Roxen $$version.$$build" >../../VERSION; \
 	  cat ../../VERSION; \
 	)
-	(cd $(SRCDIR); \
+	@(cd $(SRCDIR); \
 	  echo Tagging...; \
 	  cvs tag `cat VERSION | tr 'A-Z.' 'a-z_'`||exit 1; \
 	)
