Added ChangeLog.gz and ChangeLog.rxml.gz as requirements for 'dist'. Also added a 'dist' target to the main makefile. It only builds the 'ChangeLog' files.
Rev: Makefile:1.33
Rev: Makefile.in:1.48

--- a/Makefile.in
+++ b/Makefile.in
@@ -230,10 +230,17 @@ bump_version: bump_version.stamp
 	)
 	@touch bump_version
 
+ChangeLog.gz:
+	pike tools/make_changelog.pike | gzip -9 > ChangeLog.gz
+
+ChangeLog.rxml.gz:
+	pike tools/make_changelog.pike --rxml |gzip -9 > ChangeLog.rxml.gz
+
+
 pre_dist: bump_version weak_cleanup run_autoconf depend
 	@(cd pike; $(MAKE) pre_dist)
 
-dist:
+dist: ChangeLog.gz ChangeLog.rxml.gz
 	@if test -f $(SRCDIR)/VERSION; then :; else \
 	  echo 'You need to make pre_dist first!'; \
 	  exit 1; \
