sed module added
Rev: server/modules/tags/sed.pike:1.1

--- a/.gitattributes
+++ b/.gitattributes
@@ -209,6 +209,7 @@ urw_itc_avant_garde-demi-r binary
 /server/modules/tags/lpctag.pike foreign_ident
 /server/modules/tags/manual.pike foreign_ident
 /server/modules/tags/obox.pike foreign_ident
+/server/modules/tags/sed.pike foreign_ident
 /server/modules/tags/sqltag.pike foreign_ident
 /server/modules/tags/tablify.pike foreign_ident
 /server/modules/tags/wizard_tag.pike foreign_ident
