First version of FTP mk 2
Rev: server/protocols/ftp2.pike:1.1

--- a/.gitattributes
+++ b/.gitattributes
@@ -218,6 +218,7 @@ urw_itc_avant_garde-demi-r binary
 /server/more_modules/configure.pike foreign_ident
 /server/more_modules/lysator.pike foreign_ident
 /server/protocols/ftp.pike foreign_ident
+/server/protocols/ftp2.pike foreign_ident
 /server/protocols/gopher.pike foreign_ident
 /server/protocols/http.pike foreign_ident
 /server/protocols/ssl3.pike foreign_ident
