--- a/Makefile.in
+++ b/Makefile.in
@@ -284,19 +284,24 @@ dist: ChangeLog.gz ChangeLog.rxml.gz
 	  exit 1; \
 	fi
 	@version=`cat $(SRCDIR)/VERSION | tr 'A-Z. ' 'a-z__'`; \
-	if ls -d $$version*; then \
+	if ls -d $$version* >/dev/null 2>&1; then \
 	  echo Deleting old distributions...; \
 	  rm -rf $$version* || exit 1; \
 	else :; fi; \
 	mkdir $$version; \
+	echo Copying files...; \
 	(cd $(SRCDIR); tar cf - .)|(cd $$version; tar xf -; make dist_clean); \
+	echo Building full NDA distribution... \
 	tar cf - $$version | gzip -9 >$$version-nda.tar.gz; \
 	if (cd $$version; make keep_dbapi || exit 1); then \
 	  mv $$version/dbapi.tar . || exit 1; \
 	else :; fi; \
 	(cd $$version; make censor_dbapi); \
+	echo Building full ordinary distribution...; \
 	tar cf - $$version | gzip -9 >$$version.tar.gz; \
 	(cd $$version; make censor_crypto); \
+	echo Building lobotomized ordinary distribution...; \
 	tar cf - $$version | gzip -9 >$$version-int.tar.gz; \
 	(cd $$version; tar xf ../dbapi.tar); \
+	echo Building lobotomized NDA distribution...; \
 	tar cf - $$version | gzip -9 >$$version-nda-int.tar.gz
