--- a/Makefile.in
+++ b/Makefile.in
@@ -296,12 +296,12 @@ dist: ChangeLog.gz ChangeLog.rxml.gz
 	if (cd $$version; make keep_dbapi || exit 1); then \
 	  mv $$version/dbapi.tar . || exit 1; \
 	else :; fi; \
-	(cd $$version; make censor_dbapi); \
+	(cd $$version; make censor_dbapi || exit 1); \
 	echo Building full ordinary distribution...; \
 	tar cf - $$version | gzip -9 >$$version.tar.gz; \
-	(cd $$version; make censor_crypto); \
+	(cd $$version; make censor_crypto || exit 1); \
 	echo Building lobotomized ordinary distribution...; \
 	tar cf - $$version | gzip -9 >$$version-int.tar.gz; \
-	(cd $$version; tar xf ../dbapi.tar); \
+	(cd $$version; tar xf ../dbapi.tar || exit 1); \
 	echo Building lobotomized NDA distribution...; \
 	tar cf - $$version | gzip -9 >$$version-nda-int.tar.gz
