--- a/Makefile.in
+++ b/Makefile.in
@@ -179,25 +179,30 @@ localinstall: all
 	    chmod u+w "$(SRCDIR)/server/$$d/."; \
 	  fi; \
 	done
-	@for d in `cd "pike/$(PIKEVERSION)/src/lib"; find . -type d -print`; do \
-	  if [ -d "$(SRCDIR)/server/lib/pike/$$d/." ]; then : ; else \
-	    echo "lib/pike/$$d"; \
-	    mkdir "$(SRCDIR)/server/lib/pike/$$d" || exit 1; \
-	    chmod a+rx "$(SRCDIR)/server/lib/pike/$$d/."; \
-	    chmod u+w "$(SRCDIR)/server/lib/pike/$$d/."; \
-	  fi; \
-	done
-	@for f in `cd "pike/$(PIKEVERSION)/src/lib"; find . -type f -print`; do \
-	  if cmp "$(SRCDIR)/server/lib/pike/$$f" "pike/$(PIKEVERSION)/src/lib/$$f" >/dev/null 2>&1 ; \
-	  then : ; else \
-	    echo "lib/pike/$$f"; \
-	    if [ -f "$(SRCDIR)/server/lib/pike/$$f" ]; then \
-	      mv -f "$(SRCDIR)/server/lib/pike/$$f" "$(SRCDIR)/server/lib/pike/$$f.old"; \
-	    else : ; fi; \
-	    cp "pike/$(PIKEVERSION)/src/lib/$$f" "$(SRCDIR)/server/lib/pike/$$f" || exit 1; \
-	    chmod a+r "$(SRCDIR)/server/lib/pike/$$f"; \
-	    chmod u+w "$(SRCDIR)/server/lib/pike/$$f"; \
-	  fi ; \
+	@for sd in pike/$(PIKEVERSION)/src/lib pike/$(PIKEVERSION)/src/share; do \
+	  (if cd $$sd >/dev/null 2>&1; then \
+	    echo "Updating from $$sd"; \
+	    for d in `find . -type d -print`; do \
+	      if [ -d "$(SRCDIR)/server/lib/pike/$$d/." ]; then : ; else \
+		echo "$$sd/$$d"; \
+		mkdir "$(SRCDIR)/server/lib/pike/$$d" || exit 1; \
+		chmod a+rx "$(SRCDIR)/server/lib/pike/$$d/."; \
+		chmod u+w "$(SRCDIR)/server/lib/pike/$$d/."; \
+	      fi; \
+	    done; \
+	    for f in `find . -type f -print`; do \
+	      if cmp "$(SRCDIR)/server/lib/pike/$$f" "$$f" >/dev/null 2>&1 ; \
+	      then : ; else \
+		echo "$$sd/$$f"; \
+		if [ -f "$(SRCDIR)/server/lib/pike/$$f" ]; then \
+		  mv -f "$(SRCDIR)/server/lib/pike/$$f" "$(SRCDIR)/server/lib/pike/$$f.old"; \
+		else : ; fi; \
+		cp "$$f" "$(SRCDIR)/server/lib/pike/$$f" || exit 1; \
+		chmod a+r "$(SRCDIR)/server/lib/pike/$$f"; \
+		chmod u+w "$(SRCDIR)/server/lib/pike/$$f"; \
+	      fi ; \
+	    done; \
+          else : ; fi); \
 	done
 	(cd extern; $(MAKE) "prefix=$(prefix)" "CC=$(CC)" "LDFLAGS=$(LDFLAGS)" localinstall)
 
