Some CGI wrapper tests.
Rev: extern/cgi.testsuite/test1.in:1.1
Rev: extern/cgi.testsuite/test1.out:1.1
Rev: extern/cgi.testsuite/test2.in:1.1
Rev: extern/cgi.testsuite/test2.out:1.1
Rev: extern/cgi.testsuite/test3.in:1.1
Rev: extern/cgi.testsuite/test3.out:1.1
Rev: extern/cgi.testsuite/test4.in:1.1
Rev: extern/cgi.testsuite/test4.out:1.1

--- a/.gitattributes
+++ b/.gitattributes
@@ -7,7 +7,11 @@
 *.gif binary
 *.gz binary
 *.ico binary
+/extern/cgi.testsuite/test3.in eol=crlf
+/extern/cgi.testsuite/test4.in -text -crlf
 *.jpg binary
+*.out -text -crlf
+/extern/cgi.testsuite/test3.out eol=crlf
 /server/modules/proxies/gopher.pike -text -crlf
 *.ppm binary
 *.rc eol=crlf
