--- a/Makefile.in
+++ b/Makefile.in
@@ -318,6 +318,7 @@ dist: $(SRCDIR)/ChangeLog.gz $(SRCDIR)/ChangeLog.rxml.gz
 	(cd $$version; make censor_crypto || exit 1); \
 	echo Building lobotomized ordinary distribution...; \
 	tar cf - $$version | gzip -9 >$$version-int.tar.gz; \
+	echo Restoring DBAPI...; \
 	(cd $$version; tar xf ../dbapi.tar || exit 1); \
 	echo Building lobotomized NDA distribution...; \
 	tar cf - $$version | gzip -9 >$$version-nda-int.tar.gz
